--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20230511.0",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.27.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "12.1.1"
   },
