--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "generate-types": "json2ts -i ./schema -o ./types"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20230511.0",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "json-schema-to-typescript": "^13.1.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
