Add profile you can edit

--- a/ios/swagapp.xcodeproj/xcshareddata/xcschemes/swagapp.xcscheme
+++ b/ios/swagapp.xcodeproj/xcshareddata/xcschemes/swagapp.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:swagapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "EXTRA_PACKAGER_ARGS"
+            value = "--reset-cache"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
