Add missing v prefix to cosign version

--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Install the cosign tool (for signing Docker images) except on PRs
       - name: Install cosign
-        uses: sigstore/cosign-installer@3.2.0
+        uses: sigstore/cosign-installer@v3.2.0
         with:
           cosign-release: 'v2.2.1'
 
