--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -1,4 +1,4 @@
-name: Docker Image Publish
+name: Publish Backend
 
 on:
   push:
@@ -8,7 +8,7 @@ env:
   # Use ghcr.io for GitHub Container Registry
   REGISTRY: ghcr.io
   # GitHub repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}/backend
 
 jobs:
   build:
@@ -50,4 +50,3 @@ jobs:
           file: ./backend.Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          # Add other tags as needed, e.g., ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
