--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   backend:
-    image: ghcr.io/skaramicke/swagapp:latest
+    image: ghcr.io/skaramicke/swagapp/backend:latest
     ports:
       - "5000:5000"
     depends_on:
