--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  website:
+    image: ghcr.io/skaramicke/swagapp/website:latest
+    ports:
+      - "8080:8080"
+
   backend:
     image: ghcr.io/skaramicke/swagapp/backend:latest
     ports:
