--- a/website.nginx.conf
+++ b/website.nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
 
-    location /api {
-        proxy_pass http://backend:5000;
+    location /api/ {
+        proxy_pass http://backend:5000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
