--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -1,8 +1,11 @@
 name: Publish Backend
 
 on:
-  push:
-    branches: ['main']
+  workflow_run:
+    workflows: ['Run Tests']
+    branches: [main]
+    types:
+      - completed
 
 env:
   # Use ghcr.io for GitHub Container Registry
