Add db schema to test run

--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -24,6 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
+      - name: Install database schema
+        run: |
+          cp -a schema backend/schema
+
       - name: Run tests
         run: |
           cd backend
