--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.9",
+    "react-native-keychain": "^8.1.2",
     "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.27.0",
