Make backend able to initalize jwt secret

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,8 +11,8 @@ services:
       - "5000:5000"
     depends_on:
       - mongo
-    env_file:
-      - .env
+    volumes:
+      - /persistent/.env:/app/.env
 
   mongo:
     image: mongo:latest
