--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URL=http://192.168.0.11:5000
+API_URL=http://localhost:5000
 SECRET_KEY=fake-secret-key-for-dev
-TEST_MODE=true
+TEST_MODE=false
