--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   backend:
     image: python:3.11
     volumes:
-      - ./backend:/app  # Mount the backend code
-      - ./schema:/app/schema  # Mount the schema directory
+      - ./backend:/app
+      - ./schema:/app/schema
       - ${PWD}/tmp/backend.ini:/backend.ini
       - ${PWD}/fastlane/metadata/review_information/demo_user.txt:/review_user.txt
       - ${PWD}/fastlane/metadata/review_information/demo_password.txt:/review_password.txt
@@ -14,6 +14,7 @@ services:
       - "5000:5000"
     depends_on:
       - mongo
+    restart: unless-stopped
 
   mongo:
     image: mongo:latest
