--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -1,11 +1,9 @@
 name: Publish Backend
 
 on:
-  workflow_run:
-    workflows: ['Run Tests']
-    branches: [main]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 env:
   # Use ghcr.io for GitHub Container Registry
@@ -27,6 +25,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+
+      - name: Install database schema
+        run: |
+          cp -a schema backend/schema
+
+      - name: Run tests
+        run: |
+          cd backend
+          python -m pytest
 
       # Extract desired git commit information
       - name: Export GIT_COMMIT_INFO with git commit information
