--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -35,10 +35,10 @@ jobs:
           cd android && chmod +x ./gradlew
           ./gradlew assembleRelease --no-daemon
 
-      - name: Sign App Bundle
+      - name: Sign App APK
         uses: r0adkll/sign-android-release@v1
         with:
-          releaseDirectory: android/app/build/outputs/bundle/release
+          releaseDirectory: android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
           alias: ${{ secrets.ANDROID_SIGNING_ALIAS }}
           keyStorePassword: ${{ secrets.ANDROID_SIGNING_STORE_PASSWORD }}
@@ -47,8 +47,8 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: Signed App Bundle
-          path: android/app/build/outputs/bundle/release/swag-app.apk
+          name: Signed App APK
+          path: android/app/build/outputs/apk/release/swag-app.apk
 
       - name: Create Release
         id: create_release
@@ -67,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./android/app/build/outputs/bundle/release/swag-app.apk
+          asset_path: ./android/app/build/outputs/apk/release/swag-app.apk
           asset_name: swag-app-${{ env.CURRENT_DATE }}.apk
           asset_content_type: application/vnd.android.package-archive
