local be script, set and use environment variables (#43)
* local backend script, set and use environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     volumes:
       - ./backend:/app
       - ./schema:/app/schema
-      - ${PWD}/tmp/backend.ini:/backend.ini
-      - ${PWD}/fastlane/metadata/review_information/demo_user.txt:/review_user.txt
-      - ${PWD}/fastlane/metadata/review_information/demo_password.txt:/review_password.txt
+      - ./tmp/backend.ini:/backend.ini
     working_dir: /app
     command: bash -c "pip install -r requirements.txt && python server.py"
     ports:
