--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "ts-node start-script.ts && react-native start",
+    "start:prod": "ts-node start-script.ts --prod && react-native start",
     "test": "jest",
     "prebuild": "yarn generate-types && yarn generate-icons",
     "generate-types": "json2ts -i ./schema -o ./types",
@@ -46,6 +47,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/node": "^20.9.5",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
@@ -55,6 +57,7 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   },
   "jest": {
