--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Create .env file
+        run: |
+          touch .env
+          echo "API_URL=https://swag.mikael.green/api" >> .env
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
