--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "ts-node start-script.ts && react-native start",
-    "start:prod": "ts-node start-script.ts --prod && react-native start",
+    "start": "yarn cc && ts-node start-script.ts --test-mode && react-native start",
+    "start:notest": "yarn cc && ts-node start-script.ts && react-native start",
+    "start:prod": "yarn cc && ts-node start-script.ts --prod-server && react-native start",
     "test": "jest",
     "prebuild": "yarn generate-types && yarn generate-icons",
     "generate-types": "json2ts -i ./schema -o ./types",
-    "generate-icons": "npx icon-set-creator create ./assets/icon.jpg"
+    "generate-icons": "npx icon-set-creator create ./assets/icon.jpg",
+    "cc": "rimraf node_modules/react-native-config/ios/ReactNativeConfig/GeneratedDotEnv.m"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20230511.0",
