--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get Current Date
-        run: echo "CURRENT_DATE=$(date +%Y.%m.%d)" >> $GITHUB_ENV
-
+      - name: Set build version
+        run: echo "BUILD_VERSION=$(date +%Y.%m.%d)-$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+        
       - name: Checkout Code
         uses: actions/checkout@v2
 
@@ -20,6 +20,7 @@ jobs:
         run: |
           touch .env
           echo "API_URL=https://swag.mikael.green/api" >> .env
+          echo "TEST_MODE=false" >> .env
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -61,8 +62,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.CURRENT_DATE }}
-          release_name: Release ${{ env.CURRENT_DATE }}
+          tag_name: ${{ env.BUILD_VERSION  }}
+          release_name: Release ${{ env.BUILD_VERSION  }}
           draft: false
           prerelease: false
 
@@ -73,5 +74,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./android/app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          asset_name: swag-app-${{ env.CURRENT_DATE }}.apk
+          asset_name: swag-app-${{ env.BUILD_VERSION  }}.apk
           asset_content_type: application/vnd.android.package-archive
