--- a/website.nginx.conf
+++ b/website.nginx.conf
@@ -10,8 +10,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /db/ {
-        proxy_pass http://mongo-express:8081/;
+    location /db {
+        proxy_pass http://mongo-express:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
