Add README.md (#80)
* Add ChatGPT's idea of a good readme

* Add human touch to README

* Set correct name and add badges and flair

* Add backend documentation link to README

---------

Co-authored-by: Imamyable <37723862+Imamyable@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -61,11 +61,11 @@ yarn-error.log
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
-
 **/fastlane/report.xml
 **/fastlane/Preview.html
-**/fastlane/screenshots
 **/fastlane/test_output
+# **/fastlane/screenshots
+# Despite the recommendations, we version screenshots for the sake of the README.md
 
 # Bundle artifact
 *.jsbundle
