--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "axios": "^1.6.0",
+    "eslint-plugin-jest": "^27.6.0",
     "haversine": "^1.1.1",
     "icon-set-creator": "^1.2.6",
     "json-schema-to-typescript": "^13.1.1",
@@ -48,17 +49,19 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.9.5",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.9",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   },
