--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     // other options here
-    "types": ["@cloudflare/workers-types", "node"],
+    "types": ["@cloudflare/workers-types", "jest", "node"]
   }
 }
