Feature/user events mvp (#77)
* Add generate-types to each start step, a bootstrap
* Add User Events
* Make Profile views like EventForm

---------

Co-authored-by: Imamyable <amynylander@hotmail.com>
Co-authored-by: Imamyable <37723862+Imamyable@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "yarn cc && ts-node start-script.ts --test-mode && react-native start",
-    "start:notest": "yarn cc && ts-node start-script.ts && react-native start",
-    "start:prod": "yarn cc && ts-node start-script.ts --prod-server && react-native start",
+    "start": "yarn bootstrap && ts-node start-script.ts --test-mode && react-native start",
+    "start:notest": "yarn bootstrap && ts-node start-script.ts && react-native start",
+    "start:prod": "yarn bootstrap && ts-node start-script.ts --prod-server && react-native start",
     "test": "jest",
-    "prebuild": "yarn generate-types && yarn generate-icons",
+    "bootstrap": "yarn generate-types && yarn cc",
     "generate-types": "json2ts -i ./schema -o ./types",
     "generate-icons": "npx icon-set-creator create ./assets/icon.jpg",
     "cc": "rimraf node_modules/react-native-config/ios/ReactNativeConfig/GeneratedDotEnv.m"
@@ -33,7 +33,9 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.3.5",
     "react-native-dotenv": "^3.4.9",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-keychain": "^8.1.2",
     "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "3.3.2",
