--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Documentation articacts
+/docs/backend
+/docs/frontend
+/docs/source/*.rst
+!/docs/source/index.rst
