--- a/.github/workflows/on-release-tag.yml
+++ b/.github/workflows/on-release-tag.yml
@@ -3,7 +3,7 @@ name: Publish Docker Images
 on:
   push:
     tags:
-      - 'Release [0-9]{4}-[0-9]{2}-[0-9]{2}'
+      - "v[0-9]{4}.[0-9]{2}.[0-9]{2}-[0-9]+"
 
 jobs:
   prepare-data:
@@ -24,8 +24,8 @@ jobs:
         run: |
           SHORT_SHA=$(echo $GITHUB_SHA | cut -c 1-7)"
           TAG_NAME="${GITHUB_REF##*/}"
-          RELEASE_DATE=$(echo $TAG_NAME | sed -e 's/Release //')
-          echo "DOCKER_TAG=$RELEASE_DATE-$SHORT_SHA" >> $GITHUB_OUTPUT
+          RELEASE_DATE=$TAG_NAME
+          echo "DOCKER_TAG=$RELEASE_DATE.$SHORT_SHA" >> $GITHUB_OUTPUT
           echo "GIT_HASH=$SHORT_SHA" >> $GITHUB_OUTPUT
 
   publish-android:
@@ -59,9 +59,9 @@ jobs:
       - name: Checkout GitOps Repository
         uses: actions/checkout@v2
         with:
-          repository: 'gronitab/gronit-cluster1'
+          repository: "gronitab/gronit-cluster1"
           token: ${{ secrets.PAT_FOR_K8S }}
-          path: 'gitops-repo'
+          path: "gitops-repo"
 
       - name: Update Kubernetes Manifest Templates
         run: |
