--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: "11"
+          distribution: "adopt"
 
       - name: Install Node.js
         uses: actions/setup-node@v2
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build Android App Bundle
         run: |
-          cd android && chmod +x ./gradlew
+          cd app/android && chmod +x ./gradlew
           ./gradlew assembleRelease --no-daemon -PversionName=${{ inputs.version }}
 
       - name: Sign App APK
