Update npm install command to run in the app directory (#128)

--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -43,7 +43,7 @@ jobs:
           node-version: 14
 
       - name: Install npm dependencies
-        run: npm install
+        run: cd app && npm install
 
       - name: Build Android App Bundle
         run: |
