--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
@@ -47,15 +47,15 @@ jobs:
           cp -a schema backend/schema
 
       - name: Run tests
+        working-directory: backend
         run: |
-          cd backend
           python -m pytest
 
       # Install the cosign tool (for signing Docker images) except on PRs
       - name: Install cosign
         uses: sigstore/cosign-installer@v3.2.0
         with:
-          cosign-release: 'v2.2.1'
+          cosign-release: "v2.2.1"
 
       # Setup Docker buildx (required for building multi-platform images)
       - name: Setup Docker buildx
