Add secrets inheritance for Android publishing workflow

--- a/.github/workflows/on-release-tag.yml
+++ b/.github/workflows/on-release-tag.yml
@@ -33,6 +33,7 @@ jobs:
     uses: ./.github/workflows/publish-android.yml
     with:
       version: ${{ needs.prepare-data.outputs.DOCKER_TAG }}
+    secrets: inherit
 
   publish-website:
     needs: prepare-data
